Fix: Bootstrap 4 with `table-sm` looked a bit rubbish when collapsed
- https://github.com/DataTables/Responsive/issues/107

--- a/css/responsive.bootstrap4.scss
+++ b/css/responsive.bootstrap4.scss
@@ -7,3 +7,13 @@ $open-button-background: #0275d8 !default;
 div.dtr-bs-modal table.table tr:first-child td {
 	border-top: none;
 }
+
+table.dataTable.dtr-inline.collapsed.table-sm > tbody > tr {
+	> td,
+	> th {
+		&:first-child:before {
+			top: 5px;
+		}
+	}
+}
+
